@@ -83,7 +83,7 @@ Ensure it is installed, then download the source tarball and build fdm with:
 
 	$ tar -zxvf fdm-?.?.tar.gz
 	$ cd fdm-?.?
-	$ make
+	$ ./configure && make
 
 Then run 'make install' to install fdm to the default locations under
 /usr/local. The PREFIX environment variable may be set to specify an
@@ -1629,5 +1629,5 @@ Because I hate maintaining and testing two sets of code, there is a strong
 possibility that PCRE may become the fdm default at some point.
 
 ================================================================================
-$Id: MANUAL.in,v 1.78 2009-05-02 20:08:39 nicm Exp $
+$Id: MANUAL.in,v 1.79 2009-05-17 18:23:45 nicm Exp $
 
